--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "highcharts": "^6.0.3",
     "vue": "^2.5.2",
+    "vue-highcharts": "0.0.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
