--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "highcharts": "^6.0.3",
     "vue": "^2.5.2",
     "vue-highcharts": "0.0.10",
+    "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
