--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.17.1",
     "highcharts": "^6.0.3",
     "vue": "^2.5.2",
+    "vue-grid-layout": "^2.1.9",
     "vue-highcharts": "0.0.10",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1"
