--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-grid-layout": "^2.1.9",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1",
-    "vue2-highcharts": "^1.1.5"
+    "vue2-highcharts": "^1.1.5",
+    "vuejs-datepicker": "^0.9.21"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
