--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mustache": "^2.3.0",
     "vue": "^2.5.2",
     "vue-ace-editor": "^1.0.3",
+    "vue-click-outside": "^1.0.7",
     "vue-grid-layout": "^2.1.9",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1",
