--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ace-vue2": "^0.3.0",
     "axios": "^0.17.1",
+    "bootstrap": "^3.3.7",
     "highcharts": "^6.0.3",
     "mustache": "^2.3.0",
     "vue": "^2.5.2",
@@ -36,7 +37,7 @@
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.7",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -60,6 +61,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.19.1",
     "url-loader": "^0.5.8",
     "vue-ace-editor": "^1.0.3",
     "vue-loader": "^13.3.0",
