--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-grid-layout": "^2.1.9",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1",
+    "vue2-datepicker": "^1.7.0",
     "vue2-highcharts": "^1.1.5",
     "vuejs-datepicker": "^0.9.21",
     "vuex": "^3.0.1"
