--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-ace-editor": "^1.0.3",
     "vue-click-outside": "^1.0.7",
+    "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.9",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1",
