--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bootstrap": "^3.3.7",
     "highcharts": "^6.0.3",
     "mustache": "^2.3.0",
+    "v-hotkey": "^0.2.0",
     "vue": "^2.5.2",
     "vue-ace-editor": "^1.0.3",
+    "vue-awesome": "^2.3.4",
     "vue-click-outside": "^1.0.7",
     "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.9",
