--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "vue-click-outside": "^1.0.7",
     "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.9",
+    "vue-native-websocket": "^2.0.5",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1",
     "vue-sweetalert": "^0.1.18",
     "vue-sweetalert2": "^1.1.0",
+    "vue-websocket": "^0.2.2",
     "vue2-datepicker": "^1.7.0",
     "vue2-highcharts": "^1.1.5",
     "vuejs-datepicker": "^0.9.21",
