--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-click-outside": "^1.0.7",
     "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.9",
+    "vue-moment": "^3.1.0",
     "vue-native-websocket": "^2.0.5",
     "vue-nav-tabs": "^0.5.4",
     "vue-router": "^3.0.1",
