--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-ace-editor": "^1.0.3",
     "vue-awesome": "^2.3.4",
     "vue-click-outside": "^1.0.7",
+    "vue-color": "^2.4.4",
     "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.9",
     "vue-json-excel": "^0.1.7",
