--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "test": "webpack-dev-server --inline --progress --config build/webpack.test.conf.js",
+    "testprod": "webpack-dev-server --inline --progress --config build/webpack.testprod.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
