--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue2-datepicker": "^1.7.0",
     "vue2-highcharts": "^1.1.5",
     "vuejs-datepicker": "^0.9.21",
+    "vuetify": "^1.0.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
